# yt-dlp-ui

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
static/: style.css
templates/: album.html  archive_edit.html  base.html  home.html  job_detail.html  jobs.html  settings.html
