[package]
name = "yt-dlp-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = { version = "0.7", features = ["macros", "form"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
walkdir = "2"
